CXF-8698: Refactor signature, remove exception which never occurs